Fixed the way the index page looks on mobile.

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -85,4 +85,9 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+    .about_me {
+        width: 200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
   }
